y.output
Terminais sem uso na gramática

    INCLUDE
    MULT
    MOD
    POW
    INCREMENT
    DECREMENT
    PLUS_ASSIGN
    MINUS_ASSIGN
    MULT_ASSIGN
    DIV_ASSIGN
    AND
    OR
    NOT
    ELSE
    RETURN
    REAL


Regras inúteis no analisador por causa de conflitos

   17 Assignment: ID PLUS Assignment
   21           | NUM PLUS Assignment


Estado 47 conflitos: 10 de redução/redução
Estado 54 conflitos: 10 de redução/redução


Gramática

    0 $accept: Instr $end

    1 Instr: Func_decl
    2      | Stmts

    3 Stmts: Type Assignment ';'
    4      | Assignment ';'
    5      | FunctionCall ';'
    6      | ArrayUse ';'
    7      | Type ArrayUse ';'
    8      | error

    9 Assignment: ID ASSIGN Assignment
   10           | ID ASSIGN FunctionCall
   11           | ID ASSIGN ArrayUse
   12           | ArrayUse ASSIGN Assignment
   13           | ID COMMA Assignment
   14           | NUM COMMA Assignment
   15           | ID PLUS Assignment
   16           | ID MINUS Assignment
   17           | ID PLUS Assignment
   18           | ID DIV Assignment
   19           | NUM PLUS Assignment
   20           | NUM MINUS Assignment
   21           | NUM PLUS Assignment
   22           | NUM DIV Assignment
   23           | LPAREN Assignment RPAREN
   24           | MINUS LPAREN Assignment RPAREN
   25           | MINUS NUM
   26           | MINUS ID
   27           | NUM
   28           | ID

   29 FunctionCall: ID LPAREN RPAREN
   30             | ID LPAREN Assignment RPAREN

   31 ArrayUse: ID LBRACKET Assignment RBRACKET

   32 Func_decl: Type ID LPAREN ParamListOpt RPAREN LBRACE StmtList RBRACE

   33 ParamListOpt: ParamList
   34             | %empty

   35 ParamList: ParamList COMMA Param
   36          | Param

   37 Param: Type ID

   38 StmtList: StmtList Stmt
   39         | %empty

   40 Stmt: While_Stmt
   41     | Stmts
   42     | For_Stmt
   43     | If_Stmt
   44     | SEMI

   45 Type: INT
   46     | FLOAT
   47     | CHAR
   48     | DOUBLE
   49     | VOID
   50     | LONG

   51 While_Stmt: WHILE LPAREN Logic_Expr RPAREN Stmt
   52           | WHILE LPAREN Logic_Expr RPAREN LBRACE StmtList RBRACE

   53 For_Stmt: FOR LPAREN Logic_Expr SEMI Logic_Expr SEMI Logic_Expr RPAREN Stmt
   54         | FOR LPAREN Logic_Expr SEMI Logic_Expr SEMI Logic_Expr RPAREN LBRACE StmtList RBRACE

   55 If_Stmt: IF LPAREN Logic_Expr RPAREN Stmt
   56        | IF LPAREN Logic_Expr RPAREN LBRACE StmtList RBRACE

   57 Logic_Expr: %empty
   58           | Logic_Expr LESS_THAN Logic_Expr
   59           | Logic_Expr MORE_THAN Logic_Expr
   60           | Logic_Expr DIFF Logic_Expr
   61           | Logic_Expr EQUAL Logic_Expr
   62           | Logic_Expr MORE_EQUAL_THAN Logic_Expr
   63           | Logic_Expr LESS_EQUAL_THAN Logic_Expr
   64           | Assignment
   65           | ArrayUse


Terminais, com as regras onde eles aparecem

    $end (0) 0
    ';' (59) 3 4 5 6 7
    error (256) 8
    INCLUDE (258)
    LBRACE (259) 32 52 54 56
    LBRACKET (260) 31
    LPAREN (261) 23 24 29 30 32 51 52 53 54 55 56
    RPAREN (262) 23 24 29 30 32 51 52 53 54 55 56
    RBRACKET (263) 31
    RBRACE (264) 32 52 54 56
    COMMA (265) 13 14 35
    SEMI (266) 44 53 54
    PLUS (267) 15 17 19 21
    MINUS (268) 16 20 24 25 26
    MULT (269)
    DIV (270) 18 22
    MOD (271)
    POW (272)
    ASSIGN (273) 9 10 11 12
    INCREMENT (274)
    DECREMENT (275)
    PLUS_ASSIGN (276)
    MINUS_ASSIGN (277)
    MULT_ASSIGN (278)
    DIV_ASSIGN (279)
    AND (280)
    OR (281)
    NOT (282)
    EQUAL (283) 61
    DIFF (284) 60
    LESS_EQUAL_THAN (285) 63
    MORE_EQUAL_THAN (286) 62
    LESS_THAN (287) 58
    MORE_THAN (288) 59
    INT (289) 45
    FLOAT (290) 46
    CHAR (291) 47
    DOUBLE (292) 48
    LONG (293) 50
    VOID (294) 49
    FOR (295) 53 54
    WHILE (296) 51 52
    IF (297) 55 56
    ELSE (298)
    RETURN (299)
    NUM (300) 14 19 20 21 22 25 27
    ID (301) 9 10 11 13 15 16 17 18 26 28 29 30 31 32 37
    REAL (302)


Não terminais com as regras onde eles aparecem

    $accept (49)
        à esquerda: 0
    Instr (50)
        à esquerda: 1 2
        à direita: 0
    Stmts (51)
        à esquerda: 3 4 5 6 7 8
        à direita: 2 41
    Assignment (52)
        à esquerda: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        à direita: 3 4 9 12 13 14 15 16 17 18 19 20 21 22 23 24 30 31 64
    FunctionCall (53)
        à esquerda: 29 30
        à direita: 5 10
    ArrayUse (54)
        à esquerda: 31
        à direita: 6 7 11 12 65
    Func_decl (55)
        à esquerda: 32
        à direita: 1
    ParamListOpt (56)
        à esquerda: 33 34
        à direita: 32
    ParamList (57)
        à esquerda: 35 36
        à direita: 33 35
    Param (58)
        à esquerda: 37
        à direita: 35 36
    StmtList (59)
        à esquerda: 38 39
        à direita: 32 38 52 54 56
    Stmt (60)
        à esquerda: 40 41 42 43 44
        à direita: 38 51 53 55
    Type (61)
        à esquerda: 45 46 47 48 49 50
        à direita: 3 7 32 37
    While_Stmt (62)
        à esquerda: 51 52
        à direita: 40
    For_Stmt (63)
        à esquerda: 53 54
        à direita: 42
    If_Stmt (64)
        à esquerda: 55 56
        à direita: 43
    Logic_Expr (65)
        à esquerda: 57 58 59 60 61 62 63 64 65
        à direita: 51 52 53 54 55 56 58 59 60 61 62 63


Estado 0

    0 $accept: . Instr $end

    error   deslocar, e ir ao estado 1
    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    INT     deslocar, e ir ao estado 4
    FLOAT   deslocar, e ir ao estado 5
    CHAR    deslocar, e ir ao estado 6
    DOUBLE  deslocar, e ir ao estado 7
    LONG    deslocar, e ir ao estado 8
    VOID    deslocar, e ir ao estado 9
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 11

    Instr         ir ao estado 12
    Stmts         ir ao estado 13
    Assignment    ir ao estado 14
    FunctionCall  ir ao estado 15
    ArrayUse      ir ao estado 16
    Func_decl     ir ao estado 17
    Type          ir ao estado 18


Estado 1

    8 Stmts: error .

    $padrão  reduzir usando a regra 8 (Stmts)


Estado 2

   23 Assignment: LPAREN . Assignment RPAREN

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 20
    ArrayUse    ir ao estado 21


Estado 3

   24 Assignment: MINUS . LPAREN Assignment RPAREN
   25           | MINUS . NUM
   26           | MINUS . ID

    LPAREN  deslocar, e ir ao estado 22
    NUM     deslocar, e ir ao estado 23
    ID      deslocar, e ir ao estado 24


Estado 4

   45 Type: INT .

    $padrão  reduzir usando a regra 45 (Type)


Estado 5

   46 Type: FLOAT .

    $padrão  reduzir usando a regra 46 (Type)


Estado 6

   47 Type: CHAR .

    $padrão  reduzir usando a regra 47 (Type)


Estado 7

   48 Type: DOUBLE .

    $padrão  reduzir usando a regra 48 (Type)


Estado 8

   50 Type: LONG .

    $padrão  reduzir usando a regra 50 (Type)


Estado 9

   49 Type: VOID .

    $padrão  reduzir usando a regra 49 (Type)


Estado 10

   14 Assignment: NUM . COMMA Assignment
   19           | NUM . PLUS Assignment
   20           | NUM . MINUS Assignment
   21           | NUM . PLUS Assignment
   22           | NUM . DIV Assignment
   27           | NUM .

    COMMA  deslocar, e ir ao estado 25
    PLUS   deslocar, e ir ao estado 26
    MINUS  deslocar, e ir ao estado 27
    DIV    deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 27 (Assignment)


Estado 11

    9 Assignment: ID . ASSIGN Assignment
   10           | ID . ASSIGN FunctionCall
   11           | ID . ASSIGN ArrayUse
   13           | ID . COMMA Assignment
   15           | ID . PLUS Assignment
   16           | ID . MINUS Assignment
   17           | ID . PLUS Assignment
   18           | ID . DIV Assignment
   28           | ID .
   29 FunctionCall: ID . LPAREN RPAREN
   30             | ID . LPAREN Assignment RPAREN
   31 ArrayUse: ID . LBRACKET Assignment RBRACKET

    LBRACKET  deslocar, e ir ao estado 29
    LPAREN    deslocar, e ir ao estado 30
    COMMA     deslocar, e ir ao estado 31
    PLUS      deslocar, e ir ao estado 32
    MINUS     deslocar, e ir ao estado 33
    DIV       deslocar, e ir ao estado 34
    ASSIGN    deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 28 (Assignment)


Estado 12

    0 $accept: Instr . $end

    $end  deslocar, e ir ao estado 36


Estado 13

    2 Instr: Stmts .

    $padrão  reduzir usando a regra 2 (Instr)


Estado 14

    4 Stmts: Assignment . ';'

    ';'  deslocar, e ir ao estado 37


Estado 15

    5 Stmts: FunctionCall . ';'

    ';'  deslocar, e ir ao estado 38


Estado 16

    6 Stmts: ArrayUse . ';'
   12 Assignment: ArrayUse . ASSIGN Assignment

    ASSIGN  deslocar, e ir ao estado 39
    ';'     deslocar, e ir ao estado 40


Estado 17

    1 Instr: Func_decl .

    $padrão  reduzir usando a regra 1 (Instr)


Estado 18

    3 Stmts: Type . Assignment ';'
    7      | Type . ArrayUse ';'
   32 Func_decl: Type . ID LPAREN ParamListOpt RPAREN LBRACE StmtList RBRACE

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 41

    Assignment  ir ao estado 42
    ArrayUse    ir ao estado 43


Estado 19

    9 Assignment: ID . ASSIGN Assignment
   10           | ID . ASSIGN FunctionCall
   11           | ID . ASSIGN ArrayUse
   13           | ID . COMMA Assignment
   15           | ID . PLUS Assignment
   16           | ID . MINUS Assignment
   17           | ID . PLUS Assignment
   18           | ID . DIV Assignment
   28           | ID .
   31 ArrayUse: ID . LBRACKET Assignment RBRACKET

    LBRACKET  deslocar, e ir ao estado 29
    COMMA     deslocar, e ir ao estado 31
    PLUS      deslocar, e ir ao estado 32
    MINUS     deslocar, e ir ao estado 33
    DIV       deslocar, e ir ao estado 34
    ASSIGN    deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 28 (Assignment)


Estado 20

   23 Assignment: LPAREN Assignment . RPAREN

    RPAREN  deslocar, e ir ao estado 44


Estado 21

   12 Assignment: ArrayUse . ASSIGN Assignment

    ASSIGN  deslocar, e ir ao estado 39


Estado 22

   24 Assignment: MINUS LPAREN . Assignment RPAREN

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 45
    ArrayUse    ir ao estado 21


Estado 23

   25 Assignment: MINUS NUM .

    $padrão  reduzir usando a regra 25 (Assignment)


Estado 24

   26 Assignment: MINUS ID .

    $padrão  reduzir usando a regra 26 (Assignment)


Estado 25

   14 Assignment: NUM COMMA . Assignment

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 46
    ArrayUse    ir ao estado 21


Estado 26

   19 Assignment: NUM PLUS . Assignment
   21           | NUM PLUS . Assignment

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 47
    ArrayUse    ir ao estado 21


Estado 27

   20 Assignment: NUM MINUS . Assignment

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 48
    ArrayUse    ir ao estado 21


Estado 28

   22 Assignment: NUM DIV . Assignment

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 49
    ArrayUse    ir ao estado 21


Estado 29

   31 ArrayUse: ID LBRACKET . Assignment RBRACKET

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 50
    ArrayUse    ir ao estado 21


Estado 30

   29 FunctionCall: ID LPAREN . RPAREN
   30             | ID LPAREN . Assignment RPAREN

    LPAREN  deslocar, e ir ao estado 2
    RPAREN  deslocar, e ir ao estado 51
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 52
    ArrayUse    ir ao estado 21


Estado 31

   13 Assignment: ID COMMA . Assignment

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 53
    ArrayUse    ir ao estado 21


Estado 32

   15 Assignment: ID PLUS . Assignment
   17           | ID PLUS . Assignment

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 54
    ArrayUse    ir ao estado 21


Estado 33

   16 Assignment: ID MINUS . Assignment

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 55
    ArrayUse    ir ao estado 21


Estado 34

   18 Assignment: ID DIV . Assignment

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 56
    ArrayUse    ir ao estado 21


Estado 35

    9 Assignment: ID ASSIGN . Assignment
   10           | ID ASSIGN . FunctionCall
   11           | ID ASSIGN . ArrayUse

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 11

    Assignment    ir ao estado 57
    FunctionCall  ir ao estado 58
    ArrayUse      ir ao estado 59


Estado 36

    0 $accept: Instr $end .

    $padrão  aceitar


Estado 37

    4 Stmts: Assignment ';' .

    $padrão  reduzir usando a regra 4 (Stmts)


Estado 38

    5 Stmts: FunctionCall ';' .

    $padrão  reduzir usando a regra 5 (Stmts)


Estado 39

   12 Assignment: ArrayUse ASSIGN . Assignment

    LPAREN  deslocar, e ir ao estado 2
    MINUS   deslocar, e ir ao estado 3
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 19

    Assignment  ir ao estado 60
    ArrayUse    ir ao estado 21


Estado 40

    6 Stmts: ArrayUse ';' .

    $padrão  reduzir usando a regra 6 (Stmts)


Estado 41

    9 Assignment: ID . ASSIGN Assignment
   10           | ID . ASSIGN FunctionCall
   11           | ID . ASSIGN ArrayUse
   13           | ID . COMMA Assignment
   15           | ID . PLUS Assignment
   16           | ID . MINUS Assignment
   17           | ID . PLUS Assignment
   18           | ID . DIV Assignment
   28           | ID .
   31 ArrayUse: ID . LBRACKET Assignment RBRACKET
   32 Func_decl: Type ID . LPAREN ParamListOpt RPAREN LBRACE StmtList RBRACE

    LBRACKET  deslocar, e ir ao estado 29
    LPAREN    deslocar, e ir ao estado 61
    COMMA     deslocar, e ir ao estado 31
    PLUS      deslocar, e ir ao estado 32
    MINUS     deslocar, e ir ao estado 33
    DIV       deslocar, e ir ao estado 34
    ASSIGN    deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 28 (Assignment)


Estado 42

    3 Stmts: Type Assignment . ';'

    ';'  deslocar, e ir ao estado 62


Estado 43

    7 Stmts: Type ArrayUse . ';'
   12 Assignment: ArrayUse . ASSIGN Assignment

    ASSIGN  deslocar, e ir ao estado 39
    ';'     deslocar, e ir ao estado 63


Estado 44

   23 Assignment: LPAREN Assignment RPAREN .

    $padrão  reduzir usando a regra 23 (Assignment)


Estado 45

   24 Assignment: MINUS LPAREN Assignment . RPAREN

    RPAREN  deslocar, e ir ao estado 64


Estado 46

   14 Assignment: NUM COMMA Assignment .

    $padrão  reduzir usando a regra 14 (Assignment)


Estado 47

   19 Assignment: NUM PLUS Assignment .
   21           | NUM PLUS Assignment .

    RPAREN           reduzir usando a regra 19 (Assignment)
    RPAREN           [reduzir usando a regra 21 (Assignment)]
    RBRACKET         reduzir usando a regra 19 (Assignment)
    RBRACKET         [reduzir usando a regra 21 (Assignment)]
    SEMI             reduzir usando a regra 19 (Assignment)
    SEMI             [reduzir usando a regra 21 (Assignment)]
    EQUAL            reduzir usando a regra 19 (Assignment)
    EQUAL            [reduzir usando a regra 21 (Assignment)]
    DIFF             reduzir usando a regra 19 (Assignment)
    DIFF             [reduzir usando a regra 21 (Assignment)]
    LESS_EQUAL_THAN  reduzir usando a regra 19 (Assignment)
    LESS_EQUAL_THAN  [reduzir usando a regra 21 (Assignment)]
    MORE_EQUAL_THAN  reduzir usando a regra 19 (Assignment)
    MORE_EQUAL_THAN  [reduzir usando a regra 21 (Assignment)]
    LESS_THAN        reduzir usando a regra 19 (Assignment)
    LESS_THAN        [reduzir usando a regra 21 (Assignment)]
    MORE_THAN        reduzir usando a regra 19 (Assignment)
    MORE_THAN        [reduzir usando a regra 21 (Assignment)]
    ';'              reduzir usando a regra 19 (Assignment)
    ';'              [reduzir usando a regra 21 (Assignment)]
    $padrão         reduzir usando a regra 19 (Assignment)


Estado 48

   20 Assignment: NUM MINUS Assignment .

    $padrão  reduzir usando a regra 20 (Assignment)


Estado 49

   22 Assignment: NUM DIV Assignment .

    $padrão  reduzir usando a regra 22 (Assignment)


Estado 50

   31 ArrayUse: ID LBRACKET Assignment . RBRACKET

    RBRACKET  deslocar, e ir ao estado 65


Estado 51

   29 FunctionCall: ID LPAREN RPAREN .

    $padrão  reduzir usando a regra 29 (FunctionCall)


Estado 52

   30 FunctionCall: ID LPAREN Assignment . RPAREN

    RPAREN  deslocar, e ir ao estado 66


Estado 53

   13 Assignment: ID COMMA Assignment .

    $padrão  reduzir usando a regra 13 (Assignment)


Estado 54

   15 Assignment: ID PLUS Assignment .
   17           | ID PLUS Assignment .

    RPAREN           reduzir usando a regra 15 (Assignment)
    RPAREN           [reduzir usando a regra 17 (Assignment)]
    RBRACKET         reduzir usando a regra 15 (Assignment)
    RBRACKET         [reduzir usando a regra 17 (Assignment)]
    SEMI             reduzir usando a regra 15 (Assignment)
    SEMI             [reduzir usando a regra 17 (Assignment)]
    EQUAL            reduzir usando a regra 15 (Assignment)
    EQUAL            [reduzir usando a regra 17 (Assignment)]
    DIFF             reduzir usando a regra 15 (Assignment)
    DIFF             [reduzir usando a regra 17 (Assignment)]
    LESS_EQUAL_THAN  reduzir usando a regra 15 (Assignment)
    LESS_EQUAL_THAN  [reduzir usando a regra 17 (Assignment)]
    MORE_EQUAL_THAN  reduzir usando a regra 15 (Assignment)
    MORE_EQUAL_THAN  [reduzir usando a regra 17 (Assignment)]
    LESS_THAN        reduzir usando a regra 15 (Assignment)
    LESS_THAN        [reduzir usando a regra 17 (Assignment)]
    MORE_THAN        reduzir usando a regra 15 (Assignment)
    MORE_THAN        [reduzir usando a regra 17 (Assignment)]
    ';'              reduzir usando a regra 15 (Assignment)
    ';'              [reduzir usando a regra 17 (Assignment)]
    $padrão         reduzir usando a regra 15 (Assignment)


Estado 55

   16 Assignment: ID MINUS Assignment .

    $padrão  reduzir usando a regra 16 (Assignment)


Estado 56

   18 Assignment: ID DIV Assignment .

    $padrão  reduzir usando a regra 18 (Assignment)


Estado 57

    9 Assignment: ID ASSIGN Assignment .

    $padrão  reduzir usando a regra 9 (Assignment)


Estado 58

   10 Assignment: ID ASSIGN FunctionCall .

    $padrão  reduzir usando a regra 10 (Assignment)


Estado 59

   11 Assignment: ID ASSIGN ArrayUse .
   12           | ArrayUse . ASSIGN Assignment

    ASSIGN  deslocar, e ir ao estado 39

    $padrão  reduzir usando a regra 11 (Assignment)


Estado 60

   12 Assignment: ArrayUse ASSIGN Assignment .

    $padrão  reduzir usando a regra 12 (Assignment)


Estado 61

   32 Func_decl: Type ID LPAREN . ParamListOpt RPAREN LBRACE StmtList RBRACE

    INT     deslocar, e ir ao estado 4
    FLOAT   deslocar, e ir ao estado 5
    CHAR    deslocar, e ir ao estado 6
    DOUBLE  deslocar, e ir ao estado 7
    LONG    deslocar, e ir ao estado 8
    VOID    deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 34 (ParamListOpt)

    ParamListOpt  ir ao estado 67
    ParamList     ir ao estado 68
    Param         ir ao estado 69
    Type          ir ao estado 70


Estado 62

    3 Stmts: Type Assignment ';' .

    $padrão  reduzir usando a regra 3 (Stmts)


Estado 63

    7 Stmts: Type ArrayUse ';' .

    $padrão  reduzir usando a regra 7 (Stmts)


Estado 64

   24 Assignment: MINUS LPAREN Assignment RPAREN .

    $padrão  reduzir usando a regra 24 (Assignment)


Estado 65

   31 ArrayUse: ID LBRACKET Assignment RBRACKET .

    $padrão  reduzir usando a regra 31 (ArrayUse)


Estado 66

   30 FunctionCall: ID LPAREN Assignment RPAREN .

    $padrão  reduzir usando a regra 30 (FunctionCall)


Estado 67

   32 Func_decl: Type ID LPAREN ParamListOpt . RPAREN LBRACE StmtList RBRACE

    RPAREN  deslocar, e ir ao estado 71


Estado 68

   33 ParamListOpt: ParamList .
   35 ParamList: ParamList . COMMA Param

    COMMA  deslocar, e ir ao estado 72

    $padrão  reduzir usando a regra 33 (ParamListOpt)


Estado 69

   36 ParamList: Param .

    $padrão  reduzir usando a regra 36 (ParamList)


Estado 70

   37 Param: Type . ID

    ID  deslocar, e ir ao estado 73


Estado 71

   32 Func_decl: Type ID LPAREN ParamListOpt RPAREN . LBRACE StmtList RBRACE

    LBRACE  deslocar, e ir ao estado 74


Estado 72

   35 ParamList: ParamList COMMA . Param

    INT     deslocar, e ir ao estado 4
    FLOAT   deslocar, e ir ao estado 5
    CHAR    deslocar, e ir ao estado 6
    DOUBLE  deslocar, e ir ao estado 7
    LONG    deslocar, e ir ao estado 8
    VOID    deslocar, e ir ao estado 9

    Param  ir ao estado 75
    Type   ir ao estado 70


Estado 73

   37 Param: Type ID .

    $padrão  reduzir usando a regra 37 (Param)


Estado 74

   32 Func_decl: Type ID LPAREN ParamListOpt RPAREN LBRACE . StmtList RBRACE

    $padrão  reduzir usando a regra 39 (StmtList)

    StmtList  ir ao estado 76


Estado 75

   35 ParamList: ParamList COMMA Param .

    $padrão  reduzir usando a regra 35 (ParamList)


Estado 76

   32 Func_decl: Type ID LPAREN ParamListOpt RPAREN LBRACE StmtList . RBRACE
   38 StmtList: StmtList . Stmt

    error   deslocar, e ir ao estado 1
    LPAREN  deslocar, e ir ao estado 2
    RBRACE  deslocar, e ir ao estado 77
    SEMI    deslocar, e ir ao estado 78
    MINUS   deslocar, e ir ao estado 3
    INT     deslocar, e ir ao estado 4
    FLOAT   deslocar, e ir ao estado 5
    CHAR    deslocar, e ir ao estado 6
    DOUBLE  deslocar, e ir ao estado 7
    LONG    deslocar, e ir ao estado 8
    VOID    deslocar, e ir ao estado 9
    FOR     deslocar, e ir ao estado 79
    WHILE   deslocar, e ir ao estado 80
    IF      deslocar, e ir ao estado 81
    NUM     deslocar, e ir ao estado 10
    ID      deslocar, e ir ao estado 11

    Stmts         ir ao estado 82
    Assignment    ir ao estado 14
    FunctionCall  ir ao estado 15
    ArrayUse      ir ao estado 16
    Stmt          ir ao estado 83
    Type          ir ao estado 84
    While_Stmt    ir ao estado 85
    For_Stmt      ir ao estado 86
    If_Stmt       ir ao estado 87


Estado 77

   32 Func_decl: Type ID LPAREN ParamListOpt RPAREN LBRACE StmtList RBRACE .

    $padrão  reduzir usando a regra 32 (Func_decl)


Estado 78

   44 Stmt: SEMI .

    $padrão  reduzir usando a regra 44 (Stmt)


Estado 79

   53 For_Stmt: FOR . LPAREN Logic_Expr SEMI Logic_Expr SEMI Logic_Expr RPAREN Stmt
   54         | FOR . LPAREN Logic_Expr SEMI Logic_Expr SEMI Logic_Expr RPAREN LBRACE StmtList RBRACE

    LPAREN  deslocar, e ir ao estado 88


Estado 80

   51 While_Stmt: WHILE . LPAREN Logic_Expr RPAREN Stmt
   52           | WHILE . LPAREN Logic_Expr RPAREN LBRACE StmtList RBRACE

    LPAREN  deslocar, e ir ao estado 89


Estado 81

   55 If_Stmt: IF . LPAREN Logic_Expr RPAREN Stmt
   56        | IF . LPAREN Logic_Expr RPAREN LBRACE StmtList RBRACE

    LPAREN  deslocar, e ir ao estado 90


Estado 82

   41 Stmt: Stmts .

    $padrão  reduzir usando a regra 41 (Stmt)


Estado 83

   38 StmtList: StmtList Stmt .

    $padrão  reduzir usando a regra 38 (StmtList)


Estado 84

    3 Stmts: Type . Assignment ';'
    7      | Type . ArrayUse ';'
